--- a/main.html
+++ b/main.html
@@ -48,6 +48,7 @@
       <div class="row align-items-center vh-100 justify-content-center">
         <div class="col-md-6 align-self-center presentation text-center">
           <h1 id="im"><span class="fancy-font name">vlasenckov</span></h1>
+          <h4 id="desc" class="fancy-font">MIPT & RANEPA second year student</h4>
           <div class="buttons pt-4">
             <a
               class="btn"
@@ -67,7 +68,7 @@
     >
       <span class="display-4 hab fancy-font subsection">Curriculum vitae</span>
       <div
-        class="container vh-70 pt-5 mt-4 d-flex flex-column justify-content-around"
+        class="container vh-100 pt-5 mt-4 d-flex flex-column justify-content-around"
       >
         <div>
           <div class="row align-items-center justify-content-center">
@@ -81,7 +82,6 @@
         </div>
       </div>
     </div>
-
     <div
       id="contact"
       class="container-fluid bg-blue-2 text-center p-0 pt-lg-4 mt-lg-3"
@@ -126,12 +126,12 @@
       </div>
     </div>
 
-    <!-- <script
+    <script
     src="https://code.jquery.com/jquery-3.5.1.min.js"
     integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
     crossorigin="anonymous"
     ></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script> -->
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script> 
 
     <script src="./assets/script.js"></script>
   </body>
