add minor fix for mobile fonts

--- a/main.html
+++ b/main.html
@@ -71,14 +71,17 @@
         class="container vh-100 pt-5 mt-4 d-flex flex-column justify-content-around"
       >
         <div>
+
           <div class="row align-items-center justify-content-center">
-            <span class="icon pb-4 ml-lg-5">&#127479;&#127482;</span>
-            <span class="cv-eng pb-5 pb-lg-0 ml-lg-5"><a href="assets/static/cv/eng.pdf"><h1>Russian version</h1></a></span>
+            <span class="icon pb-4 ml-lg-5 fancy-badge">&#127479;&#127482;</span>
+            <span class="cv-eng pb-5 pb-lg-0 ml-lg-5"><a href="assets/static/cv/eng.pdf"><span class="cv-version">Russian version</span></a></span>
           </div>
+
           <div class="row align-items-center justify-content-center">
-            <span class="icon pb-4 ml-lg-5">&#127468;&#127463;</span>
-            <span class="cv-eng pb-5 pb-lg-0 ml-lg-5"><a href="assets/static/cv/eng.pdf"><h1>English version</h1></a></span>
+            <span class="icon pb-4 ml-lg-5 fancy-badge">&#127468;&#127463;</span>
+            <span class="cv-eng pb-5 pb-lg-0 ml-lg-5"><a href="assets/static/cv/eng.pdf"><span class="cv-version">English version</span></a></span>
           </div>
+
         </div>
       </div>
     </div>
@@ -92,12 +95,12 @@
       >
         <div>
           <div class="row align-items-center justify-content-center">
-            <span class="icon fas fa-envelope pb-4 ml-lg-5"></span>
+            <span class="icon fas fa-envelope pb-4 ml-lg-5 fancy-badge"></span>
             <span class="contact-email pb-5 pb-lg-0 ml-lg-5"><a href="mailto:vlasenkov.kv@phystech.edu">vlasenkov.kv@phystech.edu</a></span>
           </div>
           <div class="row align-items-center justify-content-center">
             <span
-              class="icon fas fa-phone-alt pr-lg-5 mr-lg-5 pb-5 pb-lg-0"
+              class="icon fas fa-phone-alt pr-lg-5 mr-lg-5 pb-5 pb-lg-0 fancy-badge"
             ></span>
             <span class="contact-phone">+7-977-343-64-48</span>
           </div>
