--- a/main.html
+++ b/main.html
@@ -74,12 +74,12 @@
 
           <div class="row align-items-center justify-content-center">
             <span class="icon pb-4 ml-lg-5 fancy-badge">&#127479;&#127482;</span>
-            <span class="cv-eng pb-5 pb-lg-0 ml-lg-5"><a href="assets/static/cv/eng.pdf"><span class="cv-version">Russian version</span></a></span>
+            <span class="cv-eng pb-5 pb-lg-0 ml-lg-5"><a href="assets/static/cv/ru/ru.pdf"><span class="cv-version">Russian version</span></a></span>
           </div>
 
           <div class="row align-items-center justify-content-center">
             <span class="icon pb-4 ml-lg-5 fancy-badge">&#127468;&#127463;</span>
-            <span class="cv-eng pb-5 pb-lg-0 ml-lg-5"><a href="assets/static/cv/eng.pdf"><span class="cv-version">English version</span></a></span>
+            <span class="cv-eng pb-5 pb-lg-0 ml-lg-5"><a href="assets/static/cv/eng/eng.pdf"><span class="cv-version">English version</span></a></span>
           </div>
 
         </div>
