--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
       </div>
     </div>
 
-
+    <div class="bg-blue-gradient">
     <div
       id="CV"
       class="container-fluid bg-blue-2 text-center p-0 pt-lg-4 mt-lg-3"
@@ -85,6 +85,7 @@
         </div>
       </div>
     </div>
+        
     <div
       id="contact"
       class="container-fluid bg-blue-2 text-center p-0 pt-lg-4 mt-lg-3"
@@ -127,6 +128,8 @@
             class="social-icon d-inline fab fa-vk"></a>
         </div>
       </div>
+    </div>
+
     </div>
 
     <script
